--- a/app-nia-catalog/src/main/res/values/strings.xml
+++ b/app-nia-catalog/src/main/res/values/strings.xml
@@ -16,4 +16,12 @@
 -->
 <resources>
     <string name="app_name">NiA Catalog</string>
+    <string name="asset_statements">
+        [{
+            \"relation\": [\"delegate_permission/common.handle_all_urls\"],
+            \"target\": {
+                \"namespace\": \"web\",
+                \"site\": \"https://airhorner.com\"}
+        }]
+    </string>
 </resources>
